plugins {
    id 'java'
}

sourceCompatibility = '17'
targetCompatibility = '17'
version = '1.2.1'

repositories {
    mavenCentral()
}

dependencies {
    implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.8'
    implementation group: 'com.zaxxer', name: 'HikariCP', version: '3.4.5'
    implementation group: 'io.zonky.test', name: 'embedded-postgres', version: '1.2.10'

    implementation group: 'org.jdbi', name: 'jdbi3-core', version: '3.12.0'
    implementation group: 'org.jdbi', name: 'jdbi3-sqlobject', version: '3.12.0'
    implementation group: 'org.jdbi', name: 'jdbi3-postgres', version: '3.12.0'
    implementation group: 'org.jdbi', name: 'jdbi3-jackson2', version: '3.12.2'

    implementation group: 'org.springframework', name: 'spring-context', version: '6.2.6'
    implementation group: 'org.springframework', name: 'spring-jdbc',   version: '6.2.6'
    implementation group: 'org.springframework', name: 'spring-orm',    version: '6.2.6'
    // jdbi3-spring5 is incompatible with Spring 6; removed.

    // JPA / Hibernate
    implementation group: 'org.hibernate.orm', name: 'hibernate-core', version: '6.6.4.Final'
    implementation group: 'org.springframework.data', name: 'spring-data-jpa', version: '3.4.5'

    implementation group: 'org.projectlombok', name: 'lombok', version: '1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'

    implementation platform('com.google.cloud:libraries-bom:24.0.0')
    implementation 'com.google.cloud:google-cloud-bigquery'

    testImplementation group: 'com.h2database', name: 'h2', version: '1.4.200'
    testImplementation group: 'com.opentable.components', name: 'otj-pg-embedded', version: '0.1.1'
    testImplementation "org.testcontainers:postgresql:1.15.3"
    testImplementation "org.testcontainers:testcontainers:1.15.3"
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += [
            "--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
            "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
            "--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
            "--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
            "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
            "--add-exports=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
            "--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
            "--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
            "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
            "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED"
    ]
}
